app/stylesheets/admin/design/_fr_index.scss
/* SIDEBAR NAV */
#indexes.admin #sidebar h4 {
  margin: 5px;
  border-bottom: 2px solid $dark_blue;
  color: $dark_blue;
  }


/* YEAR */

#content_area ul { list-style: none; }

/* YEAR AGENCY */

.agency_index_nav_tabs {
  &.page_summary {
    margin-bottom: 20px;
  }

  overflow: hidden;

  padding: 0;
  padding-bottom: 8px;

  margin-left: 0;

  height: 20px;
  width: 617px;

  border: 1px solid #CCC;

  li {
    float: left;
    padding: 5px 0 5px 10px;
    width: 279px;
    text-align: center;

    &:first-child {
      padding-right: 10px;
      border-right: 1px solid #CCC;
    }

    &.active {
      background-color: #DFDFDF;
      a {
        color: #000000;
        &:hover {
          text-decoration: none;
          cursor: default;
        }
      }
    }
  }
}

.page_summary {
  overflow: hidden;
  margin-bottom: 40px;

  h1.agency_name { color: $dark_blue; }
  hr { margin-top: 0px; }
  
  .agency_index_actions {
    margin-top: 10px;
    margin-bottom: 5px;
    overflow: hidden;

    .last_completed {
      float: left;
      width: 130px;
      margin-left: 10px;
      margin-top: 2px;
      font-size: 12px;
      line-height: 12px;
      }

    .mark_as_complete,
    .publish_pdfs,
    .pdf_preview { 
      padding-left: 26px;
      -webkit-transition: none;
      -moz-transition: none;
      -ms-transition: none;
      -o-transition: none;
      transition: none;
    }
    
    .mark_as_complete, .publish_pdfs {
      float: left;
      background: sprite-image("icons/admin/index_mark_as_done.png", 4px, 3px, 30px) no-repeat;
    }
    .mark_as_complete:hover, .publish_pdfs:hover {
      color: $fr_green;
      border-color: $fr_green;
      background: #e6e6e6 sprite-image("icons/admin/index_mark_as_done_active.png", 4px, 3px, 30px) no-repeat;
    }

    #max_date {
      float: left;
      margin-left: 210px;
    }
    .pdf_preview {
      float: right;
      background: sprite-image("icons/admin/index_pdf_preview.png", 5px, 4px, 30px) no-repeat;
    }
    .pdf_preview:hover {
      color: $fr_orange;
      border-color: $fr_orange;
      background: #e6e6e6 sprite-image("icons/admin/index_pdf_preview_active.png", 5px, 4px, 30px) no-repeat;
    }
  }
}

.title_bar {
  clear: both;
  color: #5697CF;
  font-family: "apertura-condensed-1","apertura-condensed-2", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  margin: 1em 0 1em;
  font-size: .8em;
  padding: 0;
  position: relative;
  text-transform: none;
  }

.title_bar h3 { font-family: "apertura-condensed-1","apertura-condensed-2", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }

.title_bar h3 {
  @extend .header_with_top_border;
}
  
.new_item { background-color: #FFFF99; }
.edit,
.edit.new_item,
.new_item:hover { background-color: #EEE; }

.index_agencies h3 {
  @extend .header_with_top_border;

  a { 
    text-transform: none;
    float: right;
    font-size: 12px;
    font-weight: normal;
    }
}

#indexes.admin .button.format.pdf.small {
  margin-left: 10px;
  background-repeat: no-repeat;
  line-height: 15px;
  font-weight: normal;
  }
#indexes.admin .page_summary .agency_index_actions {
  form.max_date {
    padding-bottom: 7px;
    border-bottom: 1px solid #DDD;

    #max_date { 
      float: none;
      margin-left: 0;
    }
  }
}

ul.entry_type {
  li { 
    clear: both;
    padding: 5px;
    overflow: hidden;
    height: 100%;
    margin-bottom: 5px;

    .btn { padding: 2px 10px 2px; }
    .btn-mini { padding: 2px 6px; }

    form { 
      display: none;
      overflow: hidden;
      margin: 0px;
      margin-top: 10px;
      width: 545px;
    }

    a.wrapper {
      width: 90%;
      display: block;
      float: left;
    }
    a.edit,
    a.cancel { 
      float: right;
      position: relative;
      right: 5px;
    }
    a.cancel {
      border: none;
      color: white;
      background-image: none;
      text-shadow: none;
      background-color: $fr_red;
    }

    ul {
      margin-top: 15px;
      li {
        form { width: 545px; }
        a.edit { 
          padding-right: 5px;
          right: 0;
        }
      }
      li.edit { background-color: #EEE; }

    }

    ul.entry_details { 
      display: none;
    }

  }

  li.hover { 
    background-color: #EEE;
    @include border-radius(3px);
  }
}

ul.entry_type {
  form input {
    display: block;
    width: 50%;
    float: left;
    }
 
  form input#entry_fr_index_doc {
    clear: both;
    margin-left: 30px;
    width: 75%;
    }

  form input[type="submit"] {
    width: 15%;
    float: right;
    background-color: $fr_green;
    color: #FFF;
    box-shadow: none;
    }
  form input[type="submit"]:hover { background-color: $golden; }

  form.disabled input[type="submit"],
  form.disbaled input[type="submit"]:hover { 
    color: #000;
    padding-left: 22px;
    background: #CCC url(/my/assets/orange_loader_CCC.gif) 8px 5px no-repeat;
  }
}

#indexes.admin.year_agency {
  /* bottom padding so last popover is visible */
  #content_area > .wrapper { padding-bottom: 200px; }

  /* popover customizations */
  .tipsy-inner { width: 580px; }
  .popover-title { 
    margin-bottom: 0;
    font-size: 16px;
    border-top: none;
    color: #000;
   }
  .popover-content dl dt { 
    width: 100px;
    text-align: right;
  }
  .popover-content {
    .loading {
      background-position-x: 220px;
      background-position-y: 1px;
      }

    dl dd { width: 420px; }
  }

  .input_tipsy {
    z-index: 500;
    .tipsy-inner {
      width: 100%;
    }
  }
}

